--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, "Help") %>
 <h1>Help</h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://www.railstutorial.org/help">Rails Tutorial help section</a>.
-  To get help on this sample app, see the
-  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
-  book</a>.
+  If you are Richard, just email us.
+</p>
+<p>
+  If you are not,
+</p>
+<p>
+   <a href="http://www.railstutorial.org/book">Google</a> what you need.
 </p>
