--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,3 @@
-
-<h1>Users#new</h1>
-
-<%= form_for @user do |f| %>
-  <div>
-    <%= f.label :username %><br>
-    <%= f.text_field :username %>
-  </div>
-  <div>
-    <%= f.label :password %><br>
-    <%= f.text_field :password %>
-  </div>
-  <%= f.submit %>
-<% end %>
+<% provide(:title, 'Sign up') %>
+<h1>Sign up</h1>
+<p>This will be a signup page for new users.</p>
