--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,10 @@
+<% provide(:title, 'All users') %>
+<h1>All users</h1>
 
+<%= will_paginate %>
 
-<h1>Viewfinder</h1>
-<ul>
-  <% @users.each do |user| %>
-    <li><%= user.username %> <%= user.password %></li>
-  <% end %>
+<ul class="users">
+  <%= render @users %>
 </ul>
-  <tr>
-    <td><%= link_to 'sign up',new_user_path %></td>
 
-
-  </tr>
+<%= will_paginate %>
