header and tab name changed

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
   <h1>Welcome to ViewFinder!</h1>
 
   <h2>
-    Provided by TEAM6 :)
+    Provided by TEAM6 :) YEA!!!
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
