--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= full_title(yield(:title)) %></title>
+	<title>Viewfinder, by Team6</title>
+		<%#= old title line below, dunno if it's removable yet %>
+   		<%#= <title><%= full_title(yield(:title)) %></title>
+
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all',
                                               'data-turbolinks-track': 'reload' %>
