--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Viewfinder</h1>
 
-<%= link_to 'FIND A PARK', controller: 'articles' %>
+<%= link_to 'FIND A PARK', controller: 'parks' %>
 
-<%= image_tag("welcome/welcomeView.jpg") %>
+<!--<%= image_tag("welcome/welcomeView.jpg") %>
