--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,10 +9,10 @@
 </p>
 
 <h2>Comments</h2>
-<%= render @article.comments %>
+<%= render @park.comments %>
 
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Edit', edit_park_path(@park) %> |
+<%= link_to 'Back', parks_path %>
