--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,6 +6,9 @@
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+
+  <%= link_to "Find a park", parks_path, class: "btn btn-lg" %>
+
 </div>
 
 <%= link_to image_tag("national-parks.jpg", alt: "park-pic") %>
