--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -1,8 +1,8 @@
 <p>
-	<strong>PARK_NAME:</strong>
+	<strong><big>Park:</big></strong>
 	<%= @park.PARK_NAME %>
 </p>
-
+<!--
 <p>
 	<strong>LATITUDE:</strong>
 	<%= @park.LATITUDE %>
@@ -22,17 +22,20 @@
 	<strong>URL:</strong>
 	<%= @park.URL %>
 </p>
+-->
+<p>
+	<strong>url:</strong>
+	<%= @park.URL %>
+	<!--<h><%= link_to @park.URL, @park %></h> -->
+</p>
 
 
-
-<h2>ParkComments</h2>
+<h2><big><strong> Park Comments</strong></big></h2>
 <%= render @park.park_comments %>
 
+
 <h2>Add a park comment:</h2>
-<%= render 'park_comments/form' %>>
-
-
-
+<%= render 'park_comments/form' %>
 
 
 
