google maps with parks

--- a/app/views/parks/index.html.erb
+++ b/app/views/parks/index.html.erb
@@ -10,7 +10,7 @@
     <th>Longitude:&nbsp </th>
     <th>Address:&nbsp </th>
     <th>Information:&nbsp </th>
-    <th>Safety_And_Cleanliness:&nbsp </th>
+    <th>&nbsp &nbsp Safety_And_Cleanliness:&nbsp </th>
     <th colspan="20"></th>
   </tr>
 
@@ -24,11 +24,11 @@
       <td><%= park.safety_and_cleanliness %></td>
       <!--<th colspan="10"></th> -->
       <colgroup>
+       <col span="1" style="width: 10%;">
+       <col span="1" style="width: 10%;">
+       <col span="1" style="width: 10%;">
        <col span="1" style="width: 15%;">
-       <col span="1" style="width: 15%;">
-       <col span="1" style="width: 15%;">
-       <col span="1" style="width: 15%;">
-       <col span="1" style="width: 15%;">
+       <col span="1" style="width: 35%;">
        <col span="1" style="width: 15%;">
       </colgroup>
 
