--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -30,6 +30,10 @@
 <%= link_to 'Edit', edit_park_path(@park) %> |
 <%= link_to 'Back', parks_path %>
 
+
+
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -43,9 +47,10 @@
   <body>
     <h3>My Google Maps Demo</h3>
     <div id="map"></div>
+
     <script>
       function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
+        var uluru = {lat: <%= @park.latitude %>, lng: <%= @park.longitude %>};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 10,
           center: uluru
