--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,20 @@
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <h5>Share beautiful pictures you took in the parks and something interesting happened during your visit</h5>
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Tracks of parks you have been to</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
 <div class="center jumbotron">
   <h1>Welcome to ViewFinder!</h1>
 
@@ -12,3 +29,4 @@
 </div>
 
 <%= link_to image_tag("national-parks.jpg", alt: "park-pic") %>
+<% end %>
