google maps for park

--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -45,7 +45,7 @@
     <div id="map"></div>
     <script>
       function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
+        var uluru = {lat: <%= @park.latitude%>,lng: <%= @park.longitude%>};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 10,
           center: uluru
