--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,6 @@
 <div class="center jumbotron">
   <h1>Welcome to ViewFinder!</h1>
-
-  <h2>
-    Provided by TEAM6 :) YEA!!!
-  </h2>
+  <h2>Provided by TEAM 6</h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 
