--- a/app/views/parks/index.html.erb
+++ b/app/views/parks/index.html.erb
@@ -5,12 +5,12 @@
 
 <table>
   <tr>
-    <th>Park_Name:&nbsp </th>
-    <th>Latitude:&nbsp </th>
-    <th>Longitude:&nbsp </th>
-    <th>Address:&nbsp </th>
-    <th>Information:&nbsp </th>
-    <th>&nbsp &nbsp Safety_And_Cleanliness:&nbsp </th>
+    <th>Park Name&nbsp </th>
+    <th>Latitude&nbsp </th>
+    <th>Longitude&nbsp </th>
+    <th>Address&nbsp </th>
+    <th>Information&nbsp </th>
+    <th>&nbsp Safety and Cleanliness&nbsp </th>
     <th colspan="20"></th>
   </tr>
 
