--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -18,10 +18,15 @@
 	<%= @park.safety_and_cleanliness %>
 </p>
 
-<%# Google Maps Integration %>
+<!--- Google Maps Integration with User Location Added -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>Geolocation</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Google Map</title>
     <style>
       #map {
         height: 400px;
@@ -31,19 +36,42 @@
   </head>
   <body>
     <div id="map"></div>
-
     <script>
-      function initMap() {
-        var parkLocation = {lat: <%= @park.latitude %>, lng: <%= @park.longitude %>};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 15,
+	      function initMap() {
+					var parkLocation = {lat: <%= @park.latitude %>, lng: <%= @park.longitude %>};
+        	var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
           center: parkLocation
         });
         var marker = new google.maps.Marker({
           position: parkLocation,
           map: map
         });
-      }
+	        var infoWindow = new google.maps.InfoWindow({map: map});
+
+
+	        if (navigator.geolocation) {
+	          navigator.geolocation.getCurrentPosition(function(position) {
+	            var pos = {
+	              lat: position.coords.latitude,
+	              lng: position.coords.longitude
+	            };
+
+	            infoWindow.setPosition(pos);
+	            infoWindow.setContent('Your Location');
+	            map.setCenter(pos);
+	          }, function() {
+	            handleLocationError(true, infoWindow, map.getCenter());
+	          });
+	        }
+	      }
+
+	      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+	        infoWindow.setPosition(pos);
+	        infoWindow.setContent(browserHasGeolocation ?
+	                              'Error: Cannot find where you are!' :
+	                              'Error: Your browser doesn\'t support geolocation.');
+	      }
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8fd4QdbBiYLZYAl8eptse7cNFImdIgjU&callback=initMap">
