--- a/app/views/parks/show.html.erb
+++ b/app/views/parks/show.html.erb
@@ -18,21 +18,15 @@
 	<%= @park.safety_and_cleanliness %>
 </p>
 
-<h2><big><strong> Park Comments</strong></big></h2>
-<%= render @park.park_comments %>
-
-
-<h2>Add a park comment:</h2>
-<%= render 'park_comments/form' %>
-
-
-
-<%= link_to 'Edit', edit_park_path(@park) %> |
-<%= link_to 'Back', parks_path %>
-
+<!--- Google Maps Integration with User Location Added -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>Geolocation</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Google Map</title>
     <style>
       #map {
         height: 400px;
@@ -41,23 +35,56 @@
     </style>
   </head>
   <body>
-    <h3>My Google Maps Demo</h3>
     <div id="map"></div>
     <script>
-      function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 10,
-          center: uluru
+	      function initMap() {
+					var parkLocation = {lat: <%= @park.latitude %>, lng: <%= @park.longitude %>};
+        	var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 12,
+          center: parkLocation
         });
         var marker = new google.maps.Marker({
-          position: uluru,
+          position: parkLocation,
           map: map
         });
-      }
+	        var infoWindow = new google.maps.InfoWindow({map: map});
+
+
+	        if (navigator.geolocation) {
+	          navigator.geolocation.getCurrentPosition(function(position) {
+	            var pos = {
+	              lat: position.coords.latitude,
+	              lng: position.coords.longitude
+	            };
+
+	            infoWindow.setPosition(pos);
+	            infoWindow.setContent('Your Location');
+	            map.setCenter(pos);
+	          }, function() {
+	            handleLocationError(true, infoWindow, map.getCenter());
+	          });
+	        }
+	      }
+
+	      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+	        infoWindow.setPosition(pos);
+	        infoWindow.setContent(browserHasGeolocation ?
+	                              'Error: Cannot find where you are!' :
+	                              'Error: Your browser doesn\'t support geolocation.');
+	      }
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8fd4QdbBiYLZYAl8eptse7cNFImdIgjU&callback=initMap">
     </script>
   </body>
 </html>
+
+<h2><big><strong> Park Comments</strong></big></h2>
+<%= render @park.park_comments %>
+
+<h2 style="text-align:left">Add a park comment:</h2>
+<%= render 'park_comments/form' %>
+
+
+<%= link_to 'Edit', edit_park_path(@park) %> |
+<%= link_to 'Back', parks_path %>
