--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,14 +1,10 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
+
+<h5 style="text-align:left">Team 6 is comprised of Alice Wang, Charlie Guan, Eric Huang, Hao Wu, Jesse Elliott, and Rui Xie.</h5>
 <p>
-  If you are Richard, you know how to find us.
+  <b>Email:</b> eha35@sfu.ca
 </p>
 <p>
-  If you are not,
-</p>
-<p>
-   [Every Thursday, 5:30PM to 8:20PM, SFU WMC 3260]
-</p>
-<p>
-  The most handsome guy in the class is our team learder. Talk to him.
+   <b> In Person:</b> Every Thursday, 5:30PM to 8:20PM, SFU WMC 3260]
 </p>
