--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,11 +1,22 @@
 <% provide(:title, "Help") %>
 <h1>Help</h1>
-<p>
-  If you are Richard, just email us.
+
+<p>Viewfinder is a parks database to help you find your new favourite park in Greater Vancouver.</p>
+
+<p>To get started, click on "Parks" in the top right hand of your screen. You will then be taken
+    a database of parks in Greater Vancouver. From here you can see the parks' name, address, safety
+    and cleanliness value, and some additional information about the park. Click on "Show" under the
+    park you want to vist. Here you can see further information about the park, as well as a
+    google maps representation of where the park is relative to your current location.
 </p>
+
 <p>
-  If you are not,
+  If you wish to make comments or microposts, you would need to sign up or sign in to Viewfinder.<br>
+  You can do this by clicking sign up/sign in on the the top right on the screen.
 </p>
+
+<!---
 <p>
    <a href="http://www.railstutorial.org/book">Google</a> what you need.
 </p>
+-->
