--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,12 +5,12 @@
         <%= render 'shared/user_info' %>
       </section>
       <section class="micropost_form">
-        <h5>Share beautiful pictures you took in the parks and something interesting happened during your visit</h5>
+        <h5>Share beautiful pictures you took or something interesting that happened during your visit!</h5>
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
     <div class="col-md-8">
-      <h3>Tracks of parks you have been to</h3>
+      <h3>Tracks of Parks you have been to</h3>
       <%= render 'shared/feed' %>
     </div>
   </div>
@@ -19,7 +19,7 @@
   <h1>Welcome to ViewFinder!</h1>
 
   <h2>
-    Provided by TEAM6 :) YEA!!!
+    Provided by TEAM6 :)
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
