--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    ul{
+      columns: 3;
+      -webkit-columns: 3;
+      -moz-columns: 3;
+    }
+  </style>
+</head>
+<body>
+
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
@@ -8,3 +21,6 @@
 </ul>
 
 <%= will_paginate %>
+
+</body>
+</html>
