--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,17 +2,17 @@
 <html>
 <head>
   <style>
-    ul{
+    .users ul{
       columns: 3;
       -webkit-columns: 3;
       -moz-columns: 3;
     }
   </style>
 </head>
-<body>
+</html>
 
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
+<h1>All Users</h1>
 
 <%= will_paginate %>
 
@@ -21,6 +21,3 @@
 </ul>
 
 <%= will_paginate %>
-
-</body>
-</html>
